fix: correct resume url

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li>Website: <a href="https://tulio.org" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">tulio.org</a></li>
                 <li><span class="inline-block mr-2">💼</span> Open to Remote Work</li>
                 <li>
-                    <a href="URL_TO_YOUR_RESUME.pdf" download="Tulio_Ribeiro_Resume.pdf" class="text-primary hover:underline">
+                    <a href="resume.pdf" download="Tulio_Ribeiro_Resume.pdf" class="text-primary hover:underline">
                         Download Resume (PDF)
                     </a>
                 </li>
