feat: improve section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         background: '#f8fafc',
                         card: '#ffffff',
                         'text-primary': '#1f2937',
-                        'text-secondary': '#6b7280',
+                        'text-secondary': '#374151',
                     },
                 }
             }
@@ -107,52 +107,131 @@
     </div>
 </div>
 
-<!-- Future Content Sections (Placeholders) -->
+<!-- After Hero Section -->
 <div class="max-w-4xl mx-auto px-4 py-16">
-    <!-- Projects Grid -->
+
+    <!-- Current Focus Section -->
     <section class="mb-20">
-        <h2 class="text-2xl font-mono mb-8">~/projects</h2>
-        <div class="grid gap-6">
-            <!-- Rust Project -->
-            <div class="p-6 border rounded-lg hover:border-primary transition-colors">
-                <div class="flex items-center mb-3">
-                    <span class="text-primary font-mono mr-2">[rust]</span>
-                    <h3 class="font-medium">Embedded Systems Experiment</h3>
+        <h2 class="text-2xl font-mono mb-8">~/current_focus</h2>
+        <div class="p-6 border rounded-lg">
+            <div class="flex items-center mb-4">
+                <span class="text-primary font-mono mr-2">[rust]</span>
+                <h3 class="font-medium">Systems Programming Journey</h3>
+            </div>
+            <div class="text-sm text-text-secondary space-y-4">
+                <p>"What I cannot create, I do not understand." — Richard Feynman</p>
+                <div class="flex items-center">
+                    <span class="mr-2">Current Exploration:</span>
+                    <span class="font-mono bg-primary/10 px-2 py-1 rounded">Ownership Patterns</span>
+                    <span class="mx-2">→</span>
+                    <span class="font-mono bg-primary/10 px-2 py-1 rounded">Async Ecosystem</span>
                 </div>
-                <p class="text-text-secondary text-sm mb-4">
-                    Weekend project exploring low-level systems programming. Bare-metal Rust on ARM Cortex-M,
-                    custom allocator implementation, peripheral register access patterns.
-                </p>
-                <div class="flex items-center text-sm text-text-secondary">
-                    <span class="mr-4">Status: WIP</span>
-                    <span class="mr-4">Last commit: 2024-02-15</span>
-                    <a href="#" class="text-primary hover:underline">View Source</a>
+                <div class="border-t border-gray-200 pt-4">
+                    <details>
+                        <summary class="cursor-pointer">Why Rust?</summary>
+                        <p class="mt-2">
+                            Exploring memory safety without GC, leveraging pattern matching,
+                            and understanding systems programming fundamentals that inform
+                            my cloud architecture work.
+                        </p>
+                    </details>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Technical Philosophy Section -->
+    <section class="mb-20">
+        <h2 class="text-2xl font-mono mb-8">~/engineering_notes</h2>
+        <div class="grid gap-6 md:grid-cols-2">
+            <div class="p-6 border rounded-lg">
+                <blockquote class="text-text-secondary space-y-4">
+                    <p class="text-lg">“The art of simplicity is a puzzle of complexity.”</p>
+                    <footer class="text-sm">— Douglas Horton</footer>
+                    <div class="border-t pt-4">
+                        <p class="text-sm">Seen in:</p>
+                        <ul class="list-disc list-inside">
+                            <li>API design tradeoffs</li>
+                            <li>Cloud cost optimization</li>
+                            <li>Legacy system modernization</li>
+                        </ul>
+                    </div>
+                </blockquote>
+            </div>
+
+            <div class="p-6 border rounded-lg">
+                <div class="text-text-secondary space-y-4">
+                    <div class="flex items-center mb-2">
+                        <span class="text-primary mr-2">▸</span>
+                        <h3 class="font-medium">Recent Technical Reading</h3>
+                    </div>
+                    <ul class="space-y-3">
+                        <li class="flex items-center">
+                            <span class="text-xs mr-2">📚</span>
+                            <a href="#" class="hover:underline">"Database Internals" by Alex Petrov</a>
+                        </li>
+                        <li class="flex items-center">
+                            <span class="text-xs mr-2">📄</span>
+                            <a href="#" class="hover:underline">Rust Ownership RFC</a>
+                        </li>
+                        <li class="flex items-center">
+                            <span class="text-xs mr-2">🎧</span>
+                            <a href="#" class="hover:underline">Software Engineering Daily Podcast</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Interactive Progress Bars Section -->
+    <section class="mb-20">
+        <h2 class="text-2xl font-mono mb-8">~/system_check</h2>
+        <div class="font-mono text-sm bg-card p-6 rounded-lg border space-y-6">
+            <div>
+                <span class="text-primary">$</span> skillset --current
+            </div>
+
+            <!-- Backend Systems Progress Bar -->
+            <div>
+                <div class="flex justify-between mb-1">
+                    <span>Backend Systems</span>
+                    <span>100%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2.5">
+                    <div class="bg-primary h-2.5 rounded-full" style="width: 100%"></div>
                 </div>
             </div>
 
-            <!-- Add more project cards as needed -->
+            <!-- Cloud Architecture Progress Bar -->
+            <div>
+                <div class="flex justify-between mb-1">
+                    <span>Cloud Architecture</span>
+                    <span>85%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2.5">
+                    <div class="bg-primary h-2.5 rounded-full" style="width: 85%"></div>
+                </div>
+            </div>
+
+            <!-- Rust Foundations Progress Bar -->
+            <div>
+                <div class="flex justify-between mb-1">
+                    <span>Rust Foundations</span>
+                    <span>40%</span>
+                </div>
+                <div class="w-full bg-gray-200 rounded-full h-2.5">
+                    <div class="bg-primary h-2.5 rounded-full" style="width: 40%"></div>
+                </div>
+            </div>
+
+            <div class="mt-4 text-xs opacity-75">
+                * Progress bars are approximations, not actual metrics
+            </div>
         </div>
     </section>
 
-    <!-- Blog Section -->
-    <section class="mb-20">
-        <h2 class="text-2xl font-mono mb-8">~/writing</h2>
-        <div class="grid gap-6">
-            <!-- Sample Blog Post -->
-            <article class="p-6 border rounded-lg hover:border-primary transition-colors">
-                <h3 class="font-medium mb-2">Why I'm Learning Rust in 2024</h3>
-                <p class="text-text-secondary text-sm mb-4">
-                    Exploring memory safety patterns, comparing async ecosystems,
-                    and building systems programming intuition beyond managed runtimes.
-                </p>
-                <div class="text-sm text-text-secondary">
-                    <span class="mr-4">2024-03-10</span>
-                    <span class="mr-4">12 min read</span>
-                    <a href="#" class="text-primary hover:underline">Read More</a>
-                </div>
-            </article>
-        </div>
-    </section>
+
 </div>
 
 <!-- Footer -->
