feat: improve contrast ratio

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         mono: ['Roboto Mono', 'ui-monospace']
                     },
                     colors: {
-                        primary: '#0EA5E9',
+                        primary: '#0369A1',
                         secondary: '#4b5563',
                         background: '#f8fafc',
                         card: '#ffffff',
