--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval';">
 
     <!-- Theme Color -->
-    <meta name="theme-color" content="#0EA5E9">
+    <meta name="theme-color" content="#0369A1">
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com" defer></script>
     <script>
         tailwind.config = {
             theme: {
