feat(hero): Replace emoji scroll indicator with SVG for consistent styling
Replaces the down arrow emoji in the hero section with an SVG icon.

This change addresses the issue of inconsistent emoji rendering across different platforms, where the emoji's color and style could vary and potentially clash with the website's theme.

Using an SVG icon provides full control over the visual appearance, ensuring the down arrow consistently matches the website's primary blue color and minimalist design across all browsers and operating systems.

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             </a>
         </div>
     </div>
+    <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce">
+        <svg class="w-6 h-6 fill-current text-primary" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9997 13.1716L4.9281 6.0999L6.3423 4.6857L11.9997 10.3431L17.6571 4.6857L19.0713 6.0999L11.9997 13.1716Z" />
+        </svg>
+    </div>
 </div>
 
 <!-- Main Content Section -->
