--- a/index.html
+++ b/index.html
@@ -182,6 +182,55 @@ var cleanData = processor.Anonymize(rawData);</code>
         </div>
     </section>
 
+    <!-- Personal Website Project Section -->
+    <section class="mb-20">
+        <h2 class="text-2xl font-mono mb-8">~/projects/personal_website</h2>
+        <div class="p-6 border rounded-lg">
+            <div class="flex items-center mb-4">
+                <span class="text-primary font-mono mr-2">[html/css/js]</span>
+                <h3 class="font-medium">Personal Website</h3>
+            </div>
+            <div class="text-sm text-text-secondary space-y-4">
+                <p>This very website! A personal showcase built with Tailwind CSS and a sprinkle of JavaScript.  It's designed to be lightweight, responsive, and a clean representation of my professional profile.</p>
+
+                <div class="grid gap-4 md:grid-cols-2">
+                    <div>
+                        <h4 class="font-medium mb-2">Technical Specs</h4>
+                        <ul class="space-y-2">
+                            <li class="flex items-center">
+                                <span class="mr-2">▸</span>
+                                <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">Tailwind CSS</span>
+                            </li>
+                            <li class="flex items-center">
+                                <span class="mr-2">▸</span>
+                                <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">HTML</span>
+                            </li>
+                            <li class="flex items-center">
+                                <span class="mr-2">▸</span>
+                                <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">JavaScript</span>
+                            </li>
+                            <li class="flex items-center">
+                                <span class="mr-2">▸</span>
+                                <span class="font-mono text-xs bg-primary/10 px-2 py-1 rounded">Static Site</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h4 class="font-medium mb-2">Resources</h4>
+                        <div class="flex flex-col space-y-2">
+                            <a href="https://github.com/tulior/tulio.org"
+                               class="flex items-center text-primary hover:underline">
+                                <span class="mr-2">⟨/⟩</span>
+                                GitHub Repository
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- System Check Section -->
     <section class="mb-20">
         <h2 class="text-2xl font-mono mb-8">~/system_check</h2>
