--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="text-center max-w-2xl px-4">
         <div class="mb-8">
             <div class="text-6xl md:text-7xl font-mono text-primary">
-                <span class="text-text-secondary">&lt;</span>/<span class="text-text-secondary">&gt;</span>
+                <span class="text-text-secondary"><</span>/<span class="text-text-secondary">></span>
             </div>
         </div>
         <h1 class="text-4xl md:text-5xl font-bold mb-4 font-mono">tulio_anjos</h1>
@@ -110,19 +110,20 @@
             </a>
         </div>
     </div>
-    <div class="absolute bottom-8 transform -translate-x-1/2 animate-bounce">
+    <div class="absolute bottom-8 transform -translate-x-1/2 animate-bounce cursor-pointer" id="scroll-arrow">
         <svg class="w-6 h-6 fill-current text-primary" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9997 13.1716L4.9281 6.0999L6.3423 4.6857L11.9997 10.3431L17.6571 4.6857L19.0713 6.0999L11.9997 13.1716Z" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M11.9997 13.1716L4.9281 6.0999L6.3423 4.6857L11.9997 10.3431L17.6571 4.6857L19.0713 6.0999L11.9997 13.1716Z"/>
         </svg>
     </div>
 </div>
 
 <!-- Main Content Section -->
-<div class="max-w-4xl mx-auto px-4 py-16">
+<div class="max-w-4xl mx-auto px-4 py-16" id="main-content">
 
     <!-- SchemaShroud Project Section -->
     <section class="mb-20">
-        <h2 class="text-2xl font-mono mb-8">~/projects/schema_shroud</h2>
+        <h2 class="md:text-2xl text-xl font-mono mb-8">~/projects/schema_shroud</h2>
         <div class="p-6 border rounded-lg">
             <div class="flex items-center mb-4">
                 <span class="text-primary font-mono mr-2">[c#]</span>
@@ -184,14 +185,15 @@ var cleanData = processor.Anonymize(rawData);</code>
 
     <!-- Personal Website Project Section -->
     <section class="mb-20">
-        <h2 class="text-2xl font-mono mb-8">~/projects/personal_website</h2>
+        <h2 class="md:text-2xl text-xl font-mono mb-8">~/projects/personal_website</h2>
         <div class="p-6 border rounded-lg">
             <div class="flex items-center mb-4">
                 <span class="text-primary font-mono mr-2">[html/css/js]</span>
                 <h3 class="font-medium">Personal Website</h3>
             </div>
             <div class="text-sm text-text-secondary space-y-4">
-                <p>This very website! A personal showcase built with Tailwind CSS and a sprinkle of JavaScript.  It's designed to be lightweight, responsive, and a clean representation of my professional profile.</p>
+                <p>This very website! A personal showcase built with Tailwind CSS and a sprinkle of JavaScript. It's
+                    designed to be lightweight, responsive, and a clean representation of my professional profile.</p>
 
                 <div class="grid gap-4 md:grid-cols-2">
                     <div>
@@ -231,68 +233,95 @@ var cleanData = processor.Anonymize(rawData);</code>
         </div>
     </section>
 
-    <!-- System Check Section -->
     <section class="mb-20">
-        <h2 class="text-2xl font-mono mb-8">~/system_check</h2>
-        <div class="font-mono text-sm bg-card p-6 rounded-lg border space-y-6">
-            <div>
-                <span class="text-primary">$</span> skillset --current
-            </div>
-
-            <!-- Backend Systems Progress Bar -->
-            <div>
-                <div class="flex justify-between mb-1">
-                    <span>Backend Systems</span>
-                    <span>100%</span>
+        <h2 class="md:text-2xl text-xl font-mono mb-8">~/contact</h2>
+        <div class="p-6 border rounded-lg">
+            <div class="space-y-4">
+                <p class="text-text-secondary">
+                    Let's discuss your next project or engineering challenge.
+                    I'm currently available for consulting engagements and
+                    select contract opportunities.
+                </p>
+                <div class="flex flex-col gap-3">
+                    <a href="mailto:mail@tulio.org"
+                       class="flex items-center gap-2 text-primary hover:underline">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <!-- Email icon -->
+                        </svg>
+                        mail@tulio.org
+                    </a>
+                    <a href="https://linkedin.com/in/tulioanjos"
+                       class="flex items-center gap-2 text-primary hover:underline">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                            <!-- LinkedIn icon -->
+                        </svg>
+                        LinkedIn Profile
+                    </a>
                 </div>
-                <div class="w-full bg-gray-200 rounded-full h-2.5">
-                    <div class="bg-primary h-2.5 rounded-full" style="width: 100%"></div>
-                </div>
-            </div>
-
-            <!-- Cloud Architecture Progress Bar -->
-            <div>
-                <div class="flex justify-between mb-1">
-                    <span>Cloud Architecture</span>
-                    <span>85%</span>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full h-2.5">
-                    <div class="bg-primary h-2.5 rounded-full" style="width: 85%"></div>
-                </div>
-            </div>
-
-            <!-- Rust Foundations Progress Bar -->
-            <div>
-                <div class="flex justify-between mb-1">
-                    <span>Rust Foundations</span>
-                    <span>0%</span>
-                </div>
-                <div class="w-full bg-gray-200 rounded-full h-2.5">
-                    <div class="bg-primary h-2.5 rounded-full" style="width: 0%"></div>
-                </div>
-            </div>
-
-            <div class="mt-4 text-xs opacity-75">
-                * Progress bars are approximations, not actual metrics
             </div>
         </div>
     </section>
 
 </div>
 
-<!-- Footer -->
-<footer class="border-t border-gray-200 py-8 text-center text-text-secondary text-sm">
+<footer class="border-t border-gray-200 py-12 text-center">
     <div class="max-w-4xl mx-auto px-4">
-        <p class="mb-2">Connect:</p>
-        <div class="flex justify-center space-x-4">
-            <a href="mailto:mail@tulio.org" class="text-primary hover:underline">email</a>
-            <span class="text-text-secondary">|</span>
-            <a href="https://github.com/tulior" class="text-primary hover:underline">github</a>
-            <span class="text-text-secondary">|</span>
-            <a href="https://linkedin.com/in/tulioanjos" class="text-primary hover:underline">linkedin</a>
+        <h3 class="text-xl font-medium mb-6">Let's Connect</h3>
+        <div class="flex flex-wrap justify-center gap-6 mb-6">
+            <a href="mailto:mail@tulio.org"
+               class="flex items-center gap-2 bg-primary/10 px-6 py-3 rounded-full hover:bg-primary/20 transition-colors">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <!-- Email icon -->
+                </svg>
+                mail@tulio.org
+            </a>
+            <a href="https://linkedin.com/in/tulioanjos"
+               class="flex items-center gap-2 bg-primary/10 px-6 py-3 rounded-full hover:bg-primary/20 transition-colors">
+                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+                    <!-- LinkedIn icon -->
+                </svg>
+                LinkedIn Profile
+            </a>
         </div>
-        <p class="mt-4">© 2025 Túlio Ribeiro dos Anjos</p>
+        <div class="flex justify-center gap-4">
+            <a href="https://github.com/tulior" class="text-text-secondary hover:text-primary transition-colors">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"/>
+                </svg>
+            </a>
+        </div>
+        <p class="mt-8 text-sm text-text-secondary">© 2025 Túlio Ribeiro dos Anjos</p>
     </div>
 </footer>
+
+<div class="fixed bottom-8 right-8 flex flex-col gap-4">
+    <a href="mailto:mail@tulio.org"
+       class="p-3 bg-primary text-white rounded-full shadow-lg hover:bg-[#0284c7] transition-colors"
+       title="Email me">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+        </svg>
+    </a>
+    <a href="https://linkedin.com/in/tulioanjos"
+       class="p-3 bg-primary text-white rounded-full shadow-lg hover:bg-[#0284c7] transition-colors"
+       title="LinkedIn Profile">
+        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+        </svg>
+    </a>
+</div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const scrollArrow = document.getElementById('scroll-arrow');
+        const mainContent = document.getElementById('main-content');
+
+        scrollArrow.addEventListener('click', () => {
+            mainContent.scrollIntoView({behavior: 'smooth'});
+        });
+    });
+</script>
 </body>
 </html>
